September 2016
  - Windows: allow to show effective members of a group
  - LAM Pro:
   -> Group of names/members + roles: allow to show effective members of a group
   -> Cron jobs: Move or delete expired accounts (Shadow, Windows, qmail, FreeRadius)


21.06.2016 5.4
  - Unix: support magic numbers for UIDs/GIDs (e.g. 389 server DNA plugin)
  - Samba 3: support for Samba password history (RFE 133)
  - LAM Pro:
   -> New module for 389ds unlocking and account (de)activation
   -> Self registration: support for Google reCAPTCHA
   -> Password notification jobs support CC and BCC
   -> Self Service: Samba 3 supports password history and minimum age check


21.03.2016 5.3
  - Requires PHP 5.4.0 or higher
  - PHP 7 support
  - Windows: support management of fax number
  - Login can show display name instead of server URL
  - Personal/Unix: support K5KEY hash type for smbk5pwd
  - New NIS netgroup module for hosts
  - Puppet: autocompletion for classes and variables, allow to enforce list of possible classes
  - fixed bugs:
   -> Autoload errors in tree view
   -> Set correct content type on JSON requests (174)
  - LAM Pro:
   -> Support for LDAP views based on nsview object class
   -> Password notification jobs support to print expiration date in email
   -> PPolicy password notification job takes pwdExpireWarning into account
   -> Custom fields: support calendar fields
   -> Zarafa contacts: allow to create contacts without Unix extension
   -> Added options for password rest page to server profile


15.12.2015 5.2
  - Windows: support for additional attributes (jpegPhoto, title, carLicense,
    employeeNumber, employeeType, businessCategory, departmentNumber, ou, o, manager)
  - SSH public key: added possibility to add/remove SSH extension
  - MIT Kerberos: set krbExtraData for new accounts
  - IMAP: allow to specify initial folders to create
  - LAM Pro:
   -> Users: allow to manage IP addresses with ipHost module