@@ -2,7 +2,10 @@ September 2016
   - Windows: allow to show effective members of a group
   - LAM Pro:
    -> Group of names/members + roles: allow to show effective members of a group
-   -> Cron jobs: Move or delete expired accounts (Shadow, Windows, qmail, FreeRadius)
+   -> Cron jobs:
+     * Move or delete expired accounts (Shadow, Windows, qmail, FreeRadius)
+     * 389ds: added job to notify before password expires
+   -> 389ds: manage password expiration time with module "Account locking"
 
 
 21.06.2016 5.4
